<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Policy Master</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
    <string name="Btn_april">April</string>
    <string name="Btn_pm">Policy Master</string>
    <string name="title_activity_pm">List</string>
    <string name="Btn_may">May</string>
    <string name="Btn_june">June</string>
    <string name="Btn_july">July</string>
    <string name="Btn_august">August</string>
    <string name="Btn_september">September</string>
    <string name="Btn_october">October</string>
    <string name="Btn_november">November</string>
    <string name="Btn_december">December</string>
    <string name="Btn_january">January</string>
    <string name="Btn_mar">March</string>
    <string name="Btn_feb">Febraury</string>
    <string name="some_hint">Enter Text To Filter</string>
    <string name="My_Header">Policy Master</string>
    <string name="title_activity_bill">Due List </string>
    <string name="pmpolicyno">Policy No</string>
    <string name="pmpolname">Name</string>
    <string name="pmfup">FUP</string>
    <string name="pmmode">Mode</string>
    <string name="pmdoc">DOC</string>
    <string name="pmstatus">Status</string>
    <string name="pmunits">Units</string>
    <string name="pmplan">Plan</string>
    <string name="pmterm">Term</string>
    <string name="pmprem">Premium</string>
    <string name="pmagcode">AgentCode</string>
    <string name="pmsa">Sum Assu</string>
    <string name="pmdob">DOB</string>
    <string name="pmadd1">Add1</string>
    <string name="pmadd2">Add2</string>
    <string name="pmadd3">Add3</string>
    <string name="pmpin">PIN</string>
    <string name="PStatus">Policy Status</string>
    <string name="search_title">Name</string>
    <string name="search_hint">EnterName</string>
    <string name="action_nblist">NB</string>
    <string name="string_agcode">Code</string>
    <string name="string_agname">Name</string>
    <string name="string_agdoa">DOA</string>
    <string name="string_licno">licence No</string>
    <string name="string_licexpdt">Lic.Exp Date</string>
    <string name="string_accountno">Account No</string>
    <string name="string_bankname">Bank</string>
    <string name="string_tel">Mobile</string>
    <string name="string_nominee">Nominee</string>
    <string name="string_nomrel">Nomm. Relation</string>
    <string name="string_exit">Exit</string>
    <string name="string_nop">No.Of Pols</string>
    <string name="string_inforce">InForce</string>
    <string name="string_lapsed">Lapsed</string>
    <string name="string_additem">Add</string>
    <string name="about">about</string>
    <string name="string_add">Add</string>
    <string name="string_refresh">Refresh</string>
    <string name="dataFile">duelp.csv</string>
    <string name="polFile">bmpolmast.csv</string>
    <string name="agFile">agmast1.csv</string>
    <string name="regFile">regmast.csv</string>
    <string name="tbFile">tbprem.csv</string>
    <string name="revFile">revival_factors.csv</string>
    <string name="string_agdocode">DoCode</string>
    <string name="string_agadr1">ADR1</string>
    <string name="string_agadr2">ADR2</string>
    <string name="string_agadr3">ADR3</string>
    <string name="string_agpin">PIN</string>
    <string name="string_agpan">PAN</string>
    <string name="string_cliacd">CLIA CODE</string>
    <string name="title_activity_send_sms">SendSMSActivity</string>
    <string name="title_activity_nb">NbActivity</string>
    <string name="title_activity_slide_show">SlideShow</string>
    <string name="title_activity_nb_data">NbData</string>
    <string name="title_activity_nbinfo">NBInfo</string>
    <string name="title_activity_enter_code">EnterCode</string>
    <string name="hello">Choose one of the features below.</string>
    <string name="description_logo">Policy Master</string>
    <string name="description_add">Add</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Enquiry</string>
    <string name="title_feature2">Lists</string>
    <string name="title_feature3">Agency Portal</string>
    <string name="title_feature4">Utilities</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    <string name="title_feature7">Extras</string>
    <string name="title_feature8">Registration</string>
    <string name="title_feature9">Club Analysis</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Content goes here...........</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>

    <color name="blue">#5555ff</color>

    <string name="title_activity_portal_password">PortalPassword</string>
    <string name="title_activity_portelrev">Portelrev</string>
    <string name="title_activity_rev">RevActivity</string>
    <string name="title_activity_portal_status">PortalStatus</string>
    <string name="title_activity_update_profile">Update_profile</string>
    <string name="title_activity_agecalc">Agecalc</string>
    <string name="title_activity_metro_status">MetroStatus</string>
    <string name="title_activity_first_pdf">FirstPdf</string>
    <string name="title_activity_doctor_locator">DoctorLocator</string>
    <string name="title_activity_activate_product">ActivateProduct</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_about_add">AboutAdd</string>
    <string name="title_activity_datepicker">Datepicker</string>
    <string name="title_activity_about_edit">AboutEdit</string>
    <string name="title_activity_parse_pdf">ParsePDF</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_forgot_regcode">Forgot_regcode</string>
    <string name="title_activity_otherbranchmenu">Otherbranchmenu</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="title_activity_blank_actvity">BlankActvity</string>
    <string name="title_activity_gmail">Gmail</string>
    <string name="title_activity_setting_theme">SettingTheme</string>
    <string name="title_activity_fe">FEActivity</string>
    <string name="title_activity_calcstore">Calcstore</string>
    <string name="some_text">     Contacted Persons....</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_paypremium">Paypremium</string>
    <string name="title_activity_devwebsite">Devwebsite</string>
 <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
</resources>
