<?xml version="1.0" encoding="utf-8"?>
    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
 <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_agcode" />

            <EditText
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                 />
            </LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/string_agname" />

            <EditText
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_agdoa" />

            <EditText
                android:id="@+id/textView6"
                android:layout_width="0dp" android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_licno" />

            <EditText
                android:id="@+id/textView8"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_licexpdt" />

            <EditText
                android:id="@+id/textView10"
                android:layout_width="0dp" 
                android:layout_weight="1" 
                android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_accountno" />

            <EditText
                android:id="@+id/textView12"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_bankname" />

            <EditText
                android:id="@+id/textView14"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_tel" />

            <EditText
                android:id="@+id/textView16"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_nominee" />

            <EditText
                android:id="@+id/textView18"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_nomrel" />

            <EditText
                android:id="@+id/textView20"
                android:layout_width="0dp" 
                android:layout_weight="1"  
                android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView27"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_agdocode" />

            <EditText
                android:id="@+id/textView28"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
               
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_agadr1" />

            <EditText
                android:id="@+id/textView30"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
               
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_agadr2" />

            <EditText
                android:id="@+id/textView32"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
               
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_agadr3" />

            <EditText
                android:id="@+id/textView34"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView37"
                android:layout_width="0dp" android:layout_weight="1"  
                android:layout_height="wrap_content"
                android:text="@string/string_agpin" />

            <EditText
                android:id="@+id/textView38"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
               
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_cliacd" />

            <EditText
                android:id="@+id/textView36"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
               
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView39"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_agpan" />

            <EditText
                android:id="@+id/textView40"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Email" />

            <EditText
                android:id="@+id/textView23"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Portal Password" />

            <EditText
                android:id="@+id/textView25"
                android:layout_width="0dp" android:layout_weight="1"  android:inputType="text|number"
                android:layout_height="wrap_content"
                 />
</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp" >
                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     style="?android:attr/buttonBarButtonStyle" 
                    android:text="Cancel" />
                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     style="?android:attr/buttonBarButtonStyle" 
                    android:text="Save" />  
    </LinearLayout>
    </LinearLayout>
    </ScrollView>

    

