<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
          <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_add"
            android:src="@drawable/ic_fa_plus"
            android:onClick="onClickAdd" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>

<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >
        
    
<LinearLayout 
    android:id="@+id/db1_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6dip">
   
 
   

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/GetEnq">
        
      
        <Button android:id="@+id/home_btn_feature1"
            android:onClick="onClickFeature"
            android:text="Enquiry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
          <View
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="#000000" />
       
     <Button android:id="@+id/button1"
            android:onClick="onClickFeature"
            android:text="Policy Manager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
          <View
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="#000000" />    
        
    
       
     
      
         
</LinearLayout>                              
</LinearLayout>          
</ScrollView>  
 
   
 


    
</LinearLayout>
